--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI or NOT</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
 </head>
 <body class="m-0 p-0 h-screen w-screen">
 
   <div class="h-screen w-screen bg-cover bg-center relative"
-       style="background-image: url('static/background.jpeg');">
+       style="background-image: url('static/images/background.jpeg');">
 
     <div class="absolute top-0 left-0 w-full h-full bg-black opacity-70"></div>
     <div class="relative z-10 flex flex-col items-center justify-center h-full">
